parser.output
   0  $accept : %entry% $end

   1  program : block DOT

   2  block : decl_list BEGIN stmts END

   3  decl_list :
   4            | decl decl_list

   5  decl : CONST const_decls
   6       | VAR var_decls
   7       | proc_decl
   8       | TYPE type_decls

   9  const_decls : const_decl
  10              | const_decl const_decls

  11  const_decl : IDENT EQUAL expr SEMI

  12  type_decls : type_decl
  13             | type_decl type_decls

  14  type_decl : IDENT EQUAL typexpr SEMI

  15  var_decls : var_decl
  16            | var_decl var_decls

  17  var_decl : ident_list COLON typexpr SEMI

  18  proc_decl : proc_heading SEMI block SEMI

  19  proc_heading : PROC name params return_type

  20  params : LPAR RPAR
  21         | LPAR formal_decls RPAR

  22  formal_decls : formal_decl
  23               | formal_decl SEMI formal_decls

  24  formal_decl : ident_list COLON typexpr
  25              | VAR ident_list COLON typexpr
  26              | proc_heading

  27  return_type :
  28              | COLON typexpr

  29  stmts : stmt_list

  30  stmt_list : stmt
  31            | stmt SEMI stmt_list

  32  stmt : line stmt1
  33       | IMPOSSIBLE

  34  line :

  35  stmt1 :
  36        | variable ASSIGN expr
  37        | name actuals
  38        | RETURN expr_opt
  39        | IF expr THEN stmts elses END
  40        | WHILE expr DO stmts END
  41        | REPEAT stmts UNTIL expr
  42        | FOR name ASSIGN expr TO expr DO stmts END
  43        | CASE expr OF arms else_part END
  44        | BREAK expr_opt

  45  elses :
  46        | ELSE stmts
  47        | ELSIF line expr THEN stmts elses

  48  arms : arm
  49       | arm VBAR arms

  50  arm : expr COLON stmts

  51  else_part :
  52            | ELSE stmts

  53  ident_list : IDENT
  54             | IDENT COMMA ident_list

  55  expr_opt :
  56           | expr

  57  expr : simple
  58       | expr RELOP simple
  59       | expr EQUAL simple

  60  simple : term
  61         | simple ADDOP term
  62         | simple MINUS term

  63  term : factor
  64       | term MULOP factor

  65  factor : variable
  66         | NUMBER
  67         | STRING
  68         | CHAR
  69         | NIL
  70         | name actuals
  71         | NOT factor
  72         | MINUS factor
  73         | LPAR expr RPAR

  74  actuals : LPAR RPAR
  75          | LPAR expr_list RPAR

  76  expr_list : expr
  77            | expr COMMA expr_list

  78  variable : name
  79           | variable SUB expr BUS
  80           | variable DOT name
  81           | variable ARROW

  82  typexpr : name
  83          | ARRAY expr OF typexpr
  84          | RECORD fields END
  85          | POINTER TO typexpr

  86  fields : field_decl opt_semi
  87         | field_decl SEMI fields

  88  field_decl : ident_list COLON typexpr

  89  opt_semi : SEMI
  90           |

  91  name : IDENT

  92  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (92)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	program  goto 7
	block  goto 8
	decl_list  goto 9
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	decl : CONST . const_decls  (5)

	IDENT  shift 13
	.  error

	const_decls  goto 14
	const_decl  goto 15


state 4
	proc_heading : PROC . name params return_type  (19)

	IDENT  shift 16
	.  error

	name  goto 17


state 5
	decl : TYPE . type_decls  (8)

	IDENT  shift 18
	.  error

	type_decls  goto 19
	type_decl  goto 20


state 6
	decl : VAR . var_decls  (6)

	IDENT  shift 21
	.  error

	var_decls  goto 22
	var_decl  goto 23
	ident_list  goto 24


state 7
	%entry% : '\001' program .  (92)

	.  reduce 92


state 8
	program : block . DOT  (1)

	DOT  shift 25
	.  error


state 9
	block : decl_list . BEGIN stmts END  (2)

	BEGIN  shift 26
	.  error


state 10
	decl_list : decl . decl_list  (4)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	decl_list  goto 27
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 11
	decl : proc_decl .  (7)

	.  reduce 7


state 12
	proc_decl : proc_heading . SEMI block SEMI  (18)

	SEMI  shift 28
	.  error


state 13
	const_decl : IDENT . EQUAL expr SEMI  (11)

	EQUAL  shift 29
	.  error


state 14
	decl : CONST const_decls .  (5)

	.  reduce 5


state 15
	const_decls : const_decl .  (9)
	const_decls : const_decl . const_decls  (10)

	IDENT  shift 13
	BEGIN  reduce 9
	CONST  reduce 9
	PROC  reduce 9
	TYPE  reduce 9
	VAR  reduce 9

	const_decls  goto 30
	const_decl  goto 15


state 16
	name : IDENT .  (91)

	.  reduce 91


state 17
	proc_heading : PROC name . params return_type  (19)

	LPAR  shift 31
	.  error

	params  goto 32


state 18
	type_decl : IDENT . EQUAL typexpr SEMI  (14)

	EQUAL  shift 33
	.  error


state 19
	decl : TYPE type_decls .  (8)

	.  reduce 8


state 20
	type_decls : type_decl .  (12)
	type_decls : type_decl . type_decls  (13)

	IDENT  shift 18
	BEGIN  reduce 12
	CONST  reduce 12
	PROC  reduce 12
	TYPE  reduce 12
	VAR  reduce 12

	type_decls  goto 34
	type_decl  goto 20


state 21
	ident_list : IDENT .  (53)
	ident_list : IDENT . COMMA ident_list  (54)

	COMMA  shift 35
	COLON  reduce 53


state 22
	decl : VAR var_decls .  (6)

	.  reduce 6


state 23
	var_decls : var_decl .  (15)
	var_decls : var_decl . var_decls  (16)

	IDENT  shift 21
	BEGIN  reduce 15
	CONST  reduce 15
	PROC  reduce 15
	TYPE  reduce 15
	VAR  reduce 15

	var_decls  goto 36
	var_decl  goto 23
	ident_list  goto 24


state 24
	var_decl : ident_list . COLON typexpr SEMI  (17)

	COLON  shift 37
	.  error


state 25
	program : block DOT .  (1)

	.  reduce 1


state 26
	block : decl_list BEGIN . stmts END  (2)
	line : .  (34)

	IMPOSSIBLE  shift 38
	IDENT  reduce 34
	SEMI  reduce 34
	END  reduce 34
	IF  reduce 34
	RETURN  reduce 34
	WHILE  reduce 34
	REPEAT  reduce 34
	FOR  reduce 34
	CASE  reduce 34
	BREAK  reduce 34

	stmts  goto 39
	stmt_list  goto 40
	stmt  goto 41
	line  goto 42


state 27
	decl_list : decl decl_list .  (4)

	.  reduce 4


state 28
	proc_decl : proc_heading SEMI . block SEMI  (18)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	block  goto 43
	decl_list  goto 9
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 29
	const_decl : IDENT EQUAL . expr SEMI  (11)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 51
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 30
	const_decls : const_decl const_decls .  (10)

	.  reduce 10


state 31
	params : LPAR . RPAR  (20)
	params : LPAR . formal_decls RPAR  (21)

	IDENT  shift 21
	RPAR  shift 57
	PROC  shift 4
	VAR  shift 58
	.  error

	ident_list  goto 59
	proc_heading  goto 60
	formal_decls  goto 61
	formal_decl  goto 62


state 32
	proc_heading : PROC name params . return_type  (19)
	return_type : .  (27)

	COLON  shift 63
	SEMI  reduce 27
	RPAR  reduce 27

	return_type  goto 64


state 33
	type_decl : IDENT EQUAL . typexpr SEMI  (14)

	IDENT  shift 16
	ARRAY  shift 65
	RECORD  shift 66
	POINTER  shift 67
	.  error

	typexpr  goto 68
	name  goto 69


state 34
	type_decls : type_decl type_decls .  (13)

	.  reduce 13


state 35
	ident_list : IDENT COMMA . ident_list  (54)

	IDENT  shift 21
	.  error

	ident_list  goto 70


state 36
	var_decls : var_decl var_decls .  (16)

	.  reduce 16


state 37
	var_decl : ident_list COLON . typexpr SEMI  (17)

	IDENT  shift 16
	ARRAY  shift 65
	RECORD  shift 66
	POINTER  shift 67
	.  error

	typexpr  goto 71
	name  goto 69


state 38
	stmt : IMPOSSIBLE .  (33)

	.  reduce 33


state 39
	block : decl_list BEGIN stmts . END  (2)

	END  shift 72
	.  error


state 40
	stmts : stmt_list .  (29)

	.  reduce 29


state 41
	stmt_list : stmt .  (30)
	stmt_list : stmt . SEMI stmt_list  (31)

	SEMI  shift 73
	VBAR  reduce 30
	ELSE  reduce 30
	END  reduce 30
	UNTIL  reduce 30
	ELSIF  reduce 30


state 42
	stmt : line . stmt1  (32)
	stmt1 : .  (35)

	IDENT  shift 16
	IF  shift 74
	RETURN  shift 75
	WHILE  shift 76
	REPEAT  shift 77
	FOR  shift 78
	CASE  shift 79
	BREAK  shift 80
	SEMI  reduce 35
	VBAR  reduce 35
	ELSE  reduce 35
	END  reduce 35
	UNTIL  reduce 35
	ELSIF  reduce 35

	name  goto 81
	stmt1  goto 82
	variable  goto 83


state 43
	proc_decl : proc_heading SEMI block . SEMI  (18)

	SEMI  shift 84
	.  error


state 44
	factor : NUMBER .  (66)

	.  reduce 66


state 45
	factor : CHAR .  (68)

	.  reduce 68


state 46
	factor : STRING .  (67)

	.  reduce 67


state 47
	factor : LPAR . expr RPAR  (73)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 85
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 48
	factor : MINUS . factor  (72)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	factor  goto 86


state 49
	factor : NOT . factor  (71)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	factor  goto 87


state 50
	factor : NIL .  (69)

	.  reduce 69


state 51
	const_decl : IDENT EQUAL expr . SEMI  (11)
	expr : expr . RELOP simple  (58)
	expr : expr . EQUAL simple  (59)

	RELOP  shift 88
	SEMI  shift 89
	EQUAL  shift 90
	.  error


state 52
	factor : name . actuals  (70)
	variable : name .  (78)

	LPAR  shift 91
	MULOP  reduce 78
	ADDOP  reduce 78
	RELOP  reduce 78
	SEMI  reduce 78
	DOT  reduce 78
	COLON  reduce 78
	RPAR  reduce 78
	COMMA  reduce 78
	SUB  reduce 78
	BUS  reduce 78
	EQUAL  reduce 78
	MINUS  reduce 78
	VBAR  reduce 78
	ARROW  reduce 78
	DO  reduce 78
	ELSE  reduce 78
	END  reduce 78
	OF  reduce 78
	THEN  reduce 78
	TO  reduce 78
	UNTIL  reduce 78
	ELSIF  reduce 78

	actuals  goto 92


state 53
	factor : variable .  (65)
	variable : variable . SUB expr BUS  (79)
	variable : variable . DOT name  (80)
	variable : variable . ARROW  (81)

	DOT  shift 93
	SUB  shift 94
	ARROW  shift 95
	MULOP  reduce 65
	ADDOP  reduce 65
	RELOP  reduce 65
	SEMI  reduce 65
	COLON  reduce 65
	RPAR  reduce 65
	COMMA  reduce 65
	BUS  reduce 65
	EQUAL  reduce 65
	MINUS  reduce 65
	VBAR  reduce 65
	DO  reduce 65
	ELSE  reduce 65
	END  reduce 65
	OF  reduce 65
	THEN  reduce 65
	TO  reduce 65
	UNTIL  reduce 65
	ELSIF  reduce 65


state 54
	expr : simple .  (57)
	simple : simple . ADDOP term  (61)
	simple : simple . MINUS term  (62)

	ADDOP  shift 96
	MINUS  shift 97
	RELOP  reduce 57
	SEMI  reduce 57
	COLON  reduce 57
	RPAR  reduce 57
	COMMA  reduce 57
	BUS  reduce 57
	EQUAL  reduce 57
	VBAR  reduce 57
	DO  reduce 57
	ELSE  reduce 57
	END  reduce 57
	OF  reduce 57
	THEN  reduce 57
	TO  reduce 57
	UNTIL  reduce 57
	ELSIF  reduce 57


state 55
	simple : term .  (60)
	term : term . MULOP factor  (64)

	MULOP  shift 98
	ADDOP  reduce 60
	RELOP  reduce 60
	SEMI  reduce 60
	COLON  reduce 60
	RPAR  reduce 60
	COMMA  reduce 60
	BUS  reduce 60
	EQUAL  reduce 60
	MINUS  reduce 60
	VBAR  reduce 60
	DO  reduce 60
	ELSE  reduce 60
	END  reduce 60
	OF  reduce 60
	THEN  reduce 60
	TO  reduce 60
	UNTIL  reduce 60
	ELSIF  reduce 60


state 56
	term : factor .  (63)

	.  reduce 63


state 57
	params : LPAR RPAR .  (20)

	.  reduce 20


state 58
	formal_decl : VAR . ident_list COLON typexpr  (25)

	IDENT  shift 21
	.  error

	ident_list  goto 99


state 59
	formal_decl : ident_list . COLON typexpr  (24)

	COLON  shift 100
	.  error


state 60
	formal_decl : proc_heading .  (26)

	.  reduce 26


state 61
	params : LPAR formal_decls . RPAR  (21)

	RPAR  shift 101
	.  error


state 62
	formal_decls : formal_decl .  (22)
	formal_decls : formal_decl . SEMI formal_decls  (23)

	SEMI  shift 102
	RPAR  reduce 22


state 63
	return_type : COLON . typexpr  (28)

	IDENT  shift 16
	ARRAY  shift 65
	RECORD  shift 66
	POINTER  shift 67
	.  error

	typexpr  goto 103
	name  goto 69


state 64
	proc_heading : PROC name params return_type .  (19)

	.  reduce 19


state 65
	typexpr : ARRAY . expr OF typexpr  (83)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 104
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 66
	typexpr : RECORD . fields END  (84)

	IDENT  shift 21
	.  error

	ident_list  goto 105
	fields  goto 106
	field_decl  goto 107


state 67
	typexpr : POINTER . TO typexpr  (85)

	TO  shift 108
	.  error


state 68
	type_decl : IDENT EQUAL typexpr . SEMI  (14)

	SEMI  shift 109
	.  error


state 69
	typexpr : name .  (82)

	.  reduce 82


state 70
	ident_list : IDENT COMMA ident_list .  (54)

	.  reduce 54


state 71
	var_decl : ident_list COLON typexpr . SEMI  (17)

	SEMI  shift 110
	.  error


state 72
	block : decl_list BEGIN stmts END .  (2)

	.  reduce 2


state 73
	stmt_list : stmt SEMI . stmt_list  (31)
	line : .  (34)

	IMPOSSIBLE  shift 38
	IDENT  reduce 34
	SEMI  reduce 34
	VBAR  reduce 34
	ELSE  reduce 34
	END  reduce 34
	IF  reduce 34
	RETURN  reduce 34
	WHILE  reduce 34
	REPEAT  reduce 34
	UNTIL  reduce 34
	FOR  reduce 34
	ELSIF  reduce 34
	CASE  reduce 34
	BREAK  reduce 34

	stmt_list  goto 111
	stmt  goto 41
	line  goto 42


state 74
	stmt1 : IF . expr THEN stmts elses END  (39)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 112
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 75
	stmt1 : RETURN . expr_opt  (38)
	expr_opt : .  (55)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	SEMI  reduce 55
	VBAR  reduce 55
	ELSE  reduce 55
	END  reduce 55
	UNTIL  reduce 55
	ELSIF  reduce 55

	expr  goto 113
	name  goto 52
	variable  goto 53
	expr_opt  goto 114
	simple  goto 54
	term  goto 55
	factor  goto 56


state 76
	stmt1 : WHILE . expr DO stmts END  (40)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 115
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 77
	stmt1 : REPEAT . stmts UNTIL expr  (41)
	line : .  (34)

	IMPOSSIBLE  shift 38
	IDENT  reduce 34
	SEMI  reduce 34
	IF  reduce 34
	RETURN  reduce 34
	WHILE  reduce 34
	REPEAT  reduce 34
	UNTIL  reduce 34
	FOR  reduce 34
	CASE  reduce 34
	BREAK  reduce 34

	stmts  goto 116
	stmt_list  goto 40
	stmt  goto 41
	line  goto 42


state 78
	stmt1 : FOR . name ASSIGN expr TO expr DO stmts END  (42)

	IDENT  shift 16
	.  error

	name  goto 117


state 79
	stmt1 : CASE . expr OF arms else_part END  (43)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 118
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 80
	stmt1 : BREAK . expr_opt  (44)
	expr_opt : .  (55)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	SEMI  reduce 55
	VBAR  reduce 55
	ELSE  reduce 55
	END  reduce 55
	UNTIL  reduce 55
	ELSIF  reduce 55

	expr  goto 113
	name  goto 52
	variable  goto 53
	expr_opt  goto 119
	simple  goto 54
	term  goto 55
	factor  goto 56


state 81
	stmt1 : name . actuals  (37)
	variable : name .  (78)

	LPAR  shift 91
	DOT  reduce 78
	SUB  reduce 78
	ASSIGN  reduce 78
	ARROW  reduce 78

	actuals  goto 120


state 82
	stmt : line stmt1 .  (32)

	.  reduce 32


state 83
	stmt1 : variable . ASSIGN expr  (36)
	variable : variable . SUB expr BUS  (79)
	variable : variable . DOT name  (80)
	variable : variable . ARROW  (81)

	DOT  shift 93
	SUB  shift 94
	ASSIGN  shift 121
	ARROW  shift 95
	.  error


state 84
	proc_decl : proc_heading SEMI block SEMI .  (18)

	.  reduce 18


state 85
	expr : expr . RELOP simple  (58)
	expr : expr . EQUAL simple  (59)
	factor : LPAR expr . RPAR  (73)

	RELOP  shift 88
	RPAR  shift 122
	EQUAL  shift 90
	.  error


state 86
	factor : MINUS factor .  (72)

	.  reduce 72


state 87
	factor : NOT factor .  (71)

	.  reduce 71


state 88
	expr : expr RELOP . simple  (58)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	simple  goto 123
	term  goto 55
	factor  goto 56


state 89
	const_decl : IDENT EQUAL expr SEMI .  (11)

	.  reduce 11


state 90
	expr : expr EQUAL . simple  (59)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	simple  goto 124
	term  goto 55
	factor  goto 56


state 91
	actuals : LPAR . RPAR  (74)
	actuals : LPAR . expr_list RPAR  (75)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	RPAR  shift 125
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 126
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56
	expr_list  goto 127


state 92
	factor : name actuals .  (70)

	.  reduce 70


state 93
	variable : variable DOT . name  (80)

	IDENT  shift 16
	.  error

	name  goto 128


state 94
	variable : variable SUB . expr BUS  (79)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 129
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 95
	variable : variable ARROW .  (81)

	.  reduce 81


state 96
	simple : simple ADDOP . term  (61)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	term  goto 130
	factor  goto 56


state 97
	simple : simple MINUS . term  (62)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	term  goto 131
	factor  goto 56


state 98
	term : term MULOP . factor  (64)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	factor  goto 132


state 99
	formal_decl : VAR ident_list . COLON typexpr  (25)

	COLON  shift 133
	.  error


state 100
	formal_decl : ident_list COLON . typexpr  (24)

	IDENT  shift 16
	ARRAY  shift 65
	RECORD  shift 66
	POINTER  shift 67
	.  error

	typexpr  goto 134
	name  goto 69


state 101
	params : LPAR formal_decls RPAR .  (21)

	.  reduce 21


state 102
	formal_decls : formal_decl SEMI . formal_decls  (23)

	IDENT  shift 21
	PROC  shift 4
	VAR  shift 58
	.  error

	ident_list  goto 59
	proc_heading  goto 60
	formal_decls  goto 135
	formal_decl  goto 62


state 103
	return_type : COLON typexpr .  (28)

	.  reduce 28


state 104
	expr : expr . RELOP simple  (58)
	expr : expr . EQUAL simple  (59)
	typexpr : ARRAY expr . OF typexpr  (83)

	RELOP  shift 88
	EQUAL  shift 90
	OF  shift 136
	.  error


state 105
	field_decl : ident_list . COLON typexpr  (88)

	COLON  shift 137
	.  error


state 106
	typexpr : RECORD fields . END  (84)

	END  shift 138
	.  error


state 107
	fields : field_decl . opt_semi  (86)
	fields : field_decl . SEMI fields  (87)
	opt_semi : .  (90)

	SEMI  shift 139
	END  reduce 90

	opt_semi  goto 140


state 108
	typexpr : POINTER TO . typexpr  (85)

	IDENT  shift 16
	ARRAY  shift 65
	RECORD  shift 66
	POINTER  shift 67
	.  error

	typexpr  goto 141
	name  goto 69


state 109
	type_decl : IDENT EQUAL typexpr SEMI .  (14)

	.  reduce 14


state 110
	var_decl : ident_list COLON typexpr SEMI .  (17)

	.  reduce 17


state 111
	stmt_list : stmt SEMI stmt_list .  (31)

	.  reduce 31


state 112
	stmt1 : IF expr . THEN stmts elses END  (39)
	expr : expr . RELOP simple  (58)
	expr : expr . EQUAL simple  (59)

	RELOP  shift 88
	EQUAL  shift 90
	THEN  shift 142
	.  error


state 113
	expr_opt : expr .  (56)
	expr : expr . RELOP simple  (58)
	expr : expr . EQUAL simple  (59)

	RELOP  shift 88
	EQUAL  shift 90
	SEMI  reduce 56
	VBAR  reduce 56
	ELSE  reduce 56
	END  reduce 56
	UNTIL  reduce 56
	ELSIF  reduce 56


state 114
	stmt1 : RETURN expr_opt .  (38)

	.  reduce 38


state 115
	stmt1 : WHILE expr . DO stmts END  (40)
	expr : expr . RELOP simple  (58)
	expr : expr . EQUAL simple  (59)

	RELOP  shift 88
	EQUAL  shift 90
	DO  shift 143
	.  error


state 116
	stmt1 : REPEAT stmts . UNTIL expr  (41)

	UNTIL  shift 144
	.  error

